--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
   "dependencies": {
+    "express": "^5.2.1",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "name": "cst-dashboard",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YoungJiSim/cst-student-dashboard.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/YoungJiSim/cst-student-dashboard/issues"
+  },
+  "homepage": "https://github.com/YoungJiSim/cst-student-dashboard#readme"
 }
